[Autofill] Initialize password_generation_agent_ by nullptr in constructor

Android WebView does not use PasswordGenerationAgent to create AutofillAgent,
so, password_generation_agent_ will be used in the wild in PasswordAutofillAgent.
The CL initializes password_generation_agent_ by nullptr in constructor.

Bug: 916121
Change-Id: Ida92bfbd2bed6916c711c2ae83dcd90053e9f5dd
Reviewed-on: https://chromium-review.googlesource.com/c/1382375
Commit-Queue: Maxim Kolosovskiy <kolos@chromium.org>
Reviewed-by: Maxim Kolosovskiy <kolos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617479}
Former-commit-id: 2c25e92f03a132d295df9ff8845f08b8fcda4913